# wrust

./: Cargo.toml  README.md
frontend/: index.html  wrust.js
src/: client.rs  main.rs
