[package]
name = "wrust"
version = "0.1.0"
authors = ["thelastinuit <email@luisignac.io>"]
edition = "2018"

[[bin]]
name = "wrust-client"
path = "src/client.rs"

[[bin]]
name = "wrust-server"
path = "src/main.rs"

[dependencies]
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
awc = "1.0.1"
env_logger = "0.7"
futures = "0.3.1"
bytes = "0.5.3"

